# Cross-API-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  conf.json  dev_note.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-doxygen.yml  gitleaks.yml
apps/Editor/: CMakeLists.txt
apps/Editor/include/CAE/: Application.hpp  Cli.hpp  Common.hpp  Console.hpp
apps/Editor/src/: application.cpp  argsHandler.cpp  cli.cpp  conf.cpp  console.cpp  main.cpp
assets/config/: default.json
assets/shaders/: animated.frag  basic_color.frag  texture.vert  transform.vert  uniform_color.vert
cmake/config/: Version.hpp.in
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  CompileOptions.cmake  CopyAssets.cmake  MakeDoc.cmake  MakeVersion.cmake  MakeVulkanSDK.cmake
documentation/: .gitignore
documentation/.doxygen/: Doxyfile  header.html
include/CAE/: Application.hpp  ArgsHandler.hpp  Common.hpp  PluginManager.hpp
modules/: CMakeLists.txt  README.md
modules/Engine/: CMakeLists.txt  README.md
modules/Engine/include/Engine/: Camera.hpp  Common.hpp  Engine.hpp  ShaderManager.hpp
modules/Engine/include/Engine/Shader/: ShaderFrontendManager.hpp  ShaderIRManager.hpp
modules/Engine/src/: engine.cpp
modules/Interfaces/: CMakeLists.txt
modules/Interfaces/include/Interfaces/: IAudio.hpp  INetwork.hpp  IPhysic.hpp  IRenderer.hpp  IUI.hpp  IWindow.hpp
modules/Interfaces/include/Interfaces/Audio/: AAudio.hpp  IAudio.hpp
modules/Interfaces/include/Interfaces/Input/: AInput.hpp  IGamepad.hpp  IInput.hpp  IKeyboard.hpp  IMouse.hpp
modules/Interfaces/include/Interfaces/Input/Key/: Gamepad.hpp  Keyboard.hpp  Mouse.hpp  Touch.hpp
modules/Interfaces/include/Interfaces/Model/: AModel.hpp
modules/Interfaces/include/Interfaces/Network/: ANetwork.hpp
modules/Interfaces/include/Interfaces/Physic/: APhysic.hpp  IPhysic.hpp
modules/Interfaces/include/Interfaces/Renderer/: ARenderer.hpp  IModel.hpp  IRenderDevice.hpp  IRenderer.hpp  IShader.hpp
modules/Interfaces/include/Interfaces/Shader/: IShaderFrontend.hpp  IShaderIR.hpp
modules/Interfaces/include/Interfaces/Shader/Frontend/: AShaderFrontend.hpp  IShaderFrontend.hpp
modules/Interfaces/include/Interfaces/Shader/IR/: AShaderIR.hpp  IShaderIR.hpp
modules/Interfaces/include/Interfaces/UI/: AUI.hpp  IUI.hpp
modules/Interfaces/include/Interfaces/Window/: AWindow.hpp  IWindow.hpp
modules/Utils/: CMakeLists.txt  README.md
modules/Utils/include/Utils/: Clock.hpp  Env.hpp  ErrorHandling.hpp  File.hpp  FrameStats.hpp  Image.hpp  Logger.hpp  MemoryMonitor.hpp  Path.hpp  PluginLoader.hpp  Utils.hpp
modules/Utils/include/Utils/Interfaces/: IPlugin.hpp
modules/Utils/src/: env.cpp  errorHandling.cpp  file.cpp  frameStats.cpp  image.cpp  logger.cpp  memoryMonitor.cpp  utils.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/Utils/: Utils.hpp
modules/utils/include/Utils/Interfaces/: IPlugin.hpp
modules/utils/src/: utils.cpp
plugins/: CMakeLists.txt  README.md
plugins/Audio/: README.md
plugins/Input/: CMakeLists.txt  README.md
plugins/Model/: CMakeLists.txt  README.md
plugins/Model/Assimp/: CMakeLists.txt  README.md
plugins/Model/Assimp/include/Assimp/: Assimp.hpp
plugins/Model/Assimp/src/: assimp.cpp  entrypoint.cpp
plugins/Network/: CMakeLists.txt  README.md
plugins/Physic/: README.md
plugins/Renderer/DirectX11/: CMakeLists.txt
plugins/Renderer/DirectX11/include/DirectX11/: DirectX11.hpp
plugins/Renderer/DirectX11/src/: directX11.cpp  entrypoint.cpp
plugins/Renderer/DirectX12/: CMakeLists.txt  README.md
plugins/Renderer/DirectX12/include/DirectX12/: DirectX12.hpp
plugins/Renderer/DirectX12/src/: directX12.cpp  entrypoint.cpp
plugins/Renderer/OpenGL/: CMakeLists.txt  README.md
plugins/Renderer/OpenGL/include/OPGL/: OPGL.hpp
plugins/Renderer/OpenGL/include/OPGL/Context/: EGLContext.hpp  EGLContextLinux.hpp  IContext.hpp  NSGLContext.hpp  NSGLContextMac.hpp  WGLContext.hpp  WGLContextWindows.hpp
plugins/Renderer/OpenGL/include/OPGL/glad/: glad.h
plugins/Renderer/OpenGL/src/: entrypoint.cpp  opgl.cpp
plugins/Renderer/OpenGL/src/context/: EGLContext.cpp  EGLContextLinux.cpp  NSGLContext.mm  NSGLContextMac.mm  WGLContext.cpp  WGLContextWindows.cpp
plugins/Renderer/OpenGL/src/glad/: glad.c
plugins/Renderer/Vulkan/: CMakeLists.txt  README.md
plugins/Renderer/Vulkan/include/VULKN/: VULKN.hpp
plugins/Renderer/Vulkan/include/Vulkan/: Vulkan.hpp
plugins/Renderer/Vulkan/src/: entrypoint.cpp  vulkan.cpp
plugins/Renderer/WebGPU/: CMakeLists.txt
plugins/Renderer/WebGPU/include/WebGPU/: WebGPU.hpp
plugins/Renderer/WebGPU/src/: entrypoint.cpp
plugins/Shader/Frontend/GLSL/: CMakeLists.txt  README.md
plugins/Shader/Frontend/GLSL/include/GLSL/: GLSL.hpp
plugins/Shader/Frontend/GLSL/src/: entrypoint.cpp  glsl.cpp
plugins/Shader/Frontend/HLSL/: CMakeLists.txt  README.md
plugins/Shader/Frontend/HLSL/include/HLSL/: HLSL.hpp
plugins/Shader/Frontend/HLSL/src/: entrypoint.cpp  hlsl.cpp
plugins/Shader/IR/SPIRV/: CMakeLists.txt  README.md
plugins/Shader/IR/SPIRV/include/SPIRV/: SPIRV.hpp
plugins/Shader/IR/SPIRV/src/: entrypoint.cpp
plugins/Shader/SPIR-V/: CMakeLists.txt
plugins/Shader/SPIR-V/include/SPIR-V/: SPIR-V.hpp
plugins/Shader/SPIR-V/src/: entrypoint.cpp  spirv.cpp
plugins/Window/Cocoa/: CMakeLists.txt  README.md
plugins/Window/Cocoa/include/Cocoa/: Cocoa.hpp
plugins/Window/Cocoa/src/: cocoa.mm  entrypoint.cpp
plugins/Window/GLFW/: CMakeLists.txt  README.md
plugins/Window/GLFW/include/GLFW/: GLFW.hpp
plugins/Window/GLFW/src/: entrypoint.cpp  glfw.cpp
plugins/Window/Win32/: CMakeLists.txt  README.md
plugins/Window/Win32/include/Win32/: Win32.hpp
plugins/Window/Win32/src/: entrypoint.cpp  win32.cpp
plugins/Window/X11/: CMakeLists.txt  README.md
plugins/Window/X11/include/X11/: X11.hpp
plugins/Window/X11/src/: entrypoint.cpp  x11.cpp
src/: application.cpp  argsHandler.cpp  conf.cpp  main.cpp  pluginManager.cpp
tests/: CMakeLists.txt
(+46 files in other folders)
